--- a/CITATION.bib
+++ b/CITATION.bib
@@ -3,14 +3,14 @@
   title   = {IQ},
   year    = {2025},
   version = {0.1.0},
-  doi     = {10.5281/zenodo.XXXXXXX},
+  doi     = {10.5281/zenodo.18069453},
   url     = {https://github.com/davaghdiva/Atomic-IQ}
 }
 
 @article{smyth_abukhalaf_<paperkey>,
   author  = {Abu Khalaf, Layla and Smyth, William},
   title   = {Squeezed Covariance Matrix Estimation: Analytic Eigenvalue Control},
-  journal = {SSRN & ArXiv},
+  journal = {SSRN Electronic Journal},
   year    = {2025},
   doi     = {<PAPER DOI IF AVAILABLE>}
 }
